[tool.poetry]
name = "q_pysonet"
version = "0.1.0"
description = "Social network by Django"
authors = ["Quastrado <quastrado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
wheel = "^0.36.2"
psycopg2-binary = "2.8.6"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
